style.css
/* ... */
#header-sidebar .widget_nav_menu ul.menu > li ul.sub-menu li {
  position: relative;
  list-style: none;
  width: 160px;
  -ms-box-sizing: border-box;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  padding: 10px 10px;
}
#header-sidebar .widget_nav_menu ul.menu > li ul.sub-menu li a {
  display: block;
  text-decoration: none;
  color: #777777;
}
#header-sidebar .widget_nav_menu ul.menu > li ul.sub-menu ul {
  display: none;
  top: -1px;
  left: 160px;
}
#header-sidebar .widget_nav_menu ul.menu > li > ul.sub-menu {
  border-top: 2px solid #00bcff;
}
#header-sidebar .widget_nav_menu ul.menu li:hover > ul.sub-menu {
  display: block;
}
/* =Some row styling for page builder
----------------------------------------------- */
.panel-row-style {
  zoom: 1;
  margin: 0 -20px;
  padding: 25px 20px;
  background-position: center center;
  background-repeat: no-repeat;
}
.panel-row-style:before {
  content: '';
  display: block;
}
.panel-row-style:after {
  content: '';
  display: table;
  clear: both;
}
.panel-row-style-wide-grey {
  background: #f6f6f6;
  border-top: 1px solid #dddddd;
  border-bottom: 1px solid #dddddd;
}
.layout-full .panel-row-style.panel-row-style-wide-grey,
.layout-full .panel-row-style.panel-row-style-full-width,
.layout-full.panels-style-force-full .panel-row-style {
  margin: 0 -1000px;
  padding: 25px 1000px 25px 1000px;
}
.layout-boxed .panel-row-style {
  margin: 0 -35px;
  padding: 25px 35px;
}
@media (max-width: 680px) {
  body.responsive.layout-boxed .panel-row-style {
    margin: 0 -35px;
    padding: 25px 35px;
  }
}
.panel-grid-cell .flexslider {
  margin-bottom: 0;
}
/* =Styling for the Polylang widget in masthead
----------------------------------------------- */
#masthead .widget_polylang ul {
  list-style: none;
}
#masthead .widget_polylang ul li {
  display: block;
  float: left;
  margin-left: 10px;
}
.vantage-carousel-title {
  font-size: 14px;
  font-weight: bold;
  color: #3b3b3b;
  text-transform: uppercase;
  line-height: 1em;
}
.vantage-carousel-title .vantage-carousel-title-text {
  display: inline-block;
  padding-right: 15px;
}
.vantage-carousel-title a.next,
.vantage-carousel-title a.previous {
  background: #3a3a3a;
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  border-radius: 2px;
  text-decoration: none;
  color: #ffffff;
  display: block;
  float: right;
  overflow: hidden;
  background-position: center center;
  margin-left: 2px;
  padding: 4px 4px 5px 4px;
}
.vantage-carousel-title a.next .vantage-icon-arrow-left,
.vantage-carousel-title a.previous .vantage-icon-arrow-left,
.vantage-carousel-title a.next .vantage-icon-arrow-right,
.vantage-carousel-title a.previous .vantage-icon-arrow-right {
  line-height: 10px;
  display: block;
  font-size: 8px;
  width: 8px;
  height: 8px;
  text-align: center;
}
.vantage-carousel-wrapper {
  overflow-x: hidden;
  overflow-y: hidden;
}
.vantage-carousel-wrapper .vantage-carousel {
  height: 200px;
  margin: 0;
  padding: 0;
  zoom: 1;
  width: 99999px;
  -webkit-transition: all 0.45s ease;
  -moz-transition: all 0.45s ease;
  -o-transition: all 0.45s ease;
  transition: all 0.45s ease;
}
.vantage-carousel-wrapper .vantage-carousel:before {
  content: '';
  display: block;
}
.vantage-carousel-wrapper .vantage-carousel:after {
  content: '';
  display: table;
  clear: both;
}
.vantage-carousel-wrapper .vantage-carousel li.carousel-entry {
  list-style: none;
  margin-left: 0;
  padding: 0;
  display: block;
  float: left;
  margin-right: 15px;
  width: 242px;
  overflow-x: hidden;
}
.vantage-carousel-wrapper .vantage-carousel li.carousel-entry:last-child {
  margin-right: 0;
}
.vantage-carousel-wrapper .vantage-carousel li.carousel-entry .thumbnail {
  line-height: 0;
}
.vantage-carousel-wrapper .vantage-carousel li.carousel-entry .thumbnail a {
  display: block;
  width: 242px;
  height: 162px;
  background-size: 242px 162px;
  background-position: center center;
}
.vantage-carousel-wrapper .vantage-carousel li.carousel-entry .thumbnail a,
.vantage-carousel-wrapper .vantage-carousel li.carousel-entry .thumbnail a span.overlay {
  -webkit-transition: all 0.35s ease;
  -moz-transition: all 0.35s ease;
  -o-transition: all 0.35s ease;
  transition: all 0.35s ease;
}
.vantage-carousel-wrapper .vantage-carousel li.carousel-entry .thumbnail a span.overlay {
  display: block;
  width: 100%;
  height: 100%;
  background: #3279bb;
  opacity: 0;
}
.vantage-carousel-wrapper .vantage-carousel li.carousel-entry .thumbnail a:hover {
  background-size: 272px 182px;
}
.vantage-carousel-wrapper .vantage-carousel li.carousel-entry .thumbnail a:hover span {
  opacity: 0.5;
}
.vantage-carousel-wrapper .vantage-carousel li.carousel-entry .default-thumbnail {
  display: block;
  width: 242px;
  height: 162px;
  background: #e8e8e8;
  background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #e0e0e0), color-stop(1, #e8e8e8));
  background: -ms-linear-gradient(bottom, #e0e0e0, #e8e8e8);
  background: -moz-linear-gradient(center bottom, #e0e0e0 0%, #e8e8e8 100%);
  background: -o-linear-gradient(#e8e8e8, #e0e0e0);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#e8e8e8', endColorstr='#e0e0e0', GradientType=0);
}
.vantage-carousel-wrapper .vantage-carousel li.carousel-entry h3 {
  font-size: 15px;
  text-align: center;
  font-weight: 500;
  color: #474747;
  margin: 10px 0 0 0;
}
.vantage-carousel-wrapper .vantage-carousel li.carousel-entry h3 a {
  text-decoration: none;
  color: inherit;
}
.vantage-carousel-wrapper .vantage-carousel li.loading {
  display: block;
  width: 242px;
  height: 162px;
  float: left;
  background: url(images/carousel-loader.gif) #f6f6f6 center center no-repeat;
  margin: 0;
}
.vantage-grid-loop {
  zoom: 1;
  margin: 0 -15px 0 -15px;
}
.vantage-grid-loop:before {
  content: '';
  display: block;
}
.vantage-grid-loop:after {
  content: '';
  display: table;
  clear: both;
}
/* ... */

